--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
             <nav class="nav">
 
                 <ul>
-                    <li><a href="https://www.instagram.com/yawsinhosseini">Instagram</a></li>
-                    <li><a href="https://t.me/yawsinhosseini">Telegram</a></li>
-                    <li><a><img src="/images/me.jpg" alt="" class="myImage"></a></li>
-                    <li><a href="https://t.me/HarfChatBot?start=e3061c00c14b"> Anonymous Message</a></li>
                     <li><a class="changingTheme">Change Background</a></li>
+                    <li><a href="https://www.instagram.com/yawsinhosseini">Instagram</a></li>
+                    <li><a><img src="me.jpg" alt="" class="myImage"></a></li>
+                    <li><a href="https://t.me/yawsinhosseini">Telegram</a></li>
+
+                    <li><a href="https://t.me/HarfChatBot?start=e3061c00c14b"> Anonymous Message</a></li>
+
                 </ul>
-               
+
                 <div class="loader">
                     <div class="loader-inner">
                         <div class="loader-line-wrap">
