--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </nav>
             <p class="welcomeText">Hey there!
 
-                Thanks for joining. We’re thrilled to have you.
+                Thanks for joining. I’m thrilled to have you.
 
                 Welcome to my site!😊</p>
             <span class="loader1"></span>
